模板更新,spa 单点登录

--- a/templates/project/clients/webapp/src/app/share/layout/layout.component.html
+++ b/templates/project/clients/webapp/src/app/share/layout/layout.component.html
@@ -21,6 +21,6 @@
     </mat-menu>
   </span>
   <span *ngIf="!isLogin">
-    <a mat-button [routerLink]="['/login']">登录</a>
+    <a mat-button (click)="login()">登录</a>
   </span>
 </mat-toolbar>
