--- a/templates/project/src/Service.Identity/Views/Account/Login.cshtml
+++ b/templates/project/src/Service.Identity/Views/Account/Login.cshtml
@@ -2,20 +2,16 @@
 
 <div class="login-page">
     <div class="lead">
-        <h1>Login</h1>
-        <p>Choose how to login</p>
+        <h1>登录</h1>
     </div>
-
     <partial name="_ValidationSummary" />
-
     <div class="row">
-
         @if (Model.EnableLocalLogin)
         {
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-header">
-                        <h2>Local Account</h2>
+                        <h3>站内用户</h3>
                     </div>
 
                     <div class="card-body">
@@ -54,7 +50,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-header">
-                        <h2>External Account</h2>
+                        <h3>第三方用户</h3>
                     </div>
                     <div class="card-body">
                         <ul class="list-inline">
