--- a/templates/project/src/Service.Identity/Views/Home/Index.cshtml
+++ b/templates/project/src/Service.Identity/Views/Home/Index.cshtml
@@ -5,9 +5,9 @@
 }
 
 <div class="welcome-page">
-    <h1>
+@*    <h1>
         <img src="~/icon.jpg">
-        Welcome to IdentityServer4
+        Welcome to MyProjectName
         <small class="text-muted">(version @version)</small>
     </h1>
 
@@ -28,5 +28,5 @@
             <a href="https://github.com/identityserver/IdentityServer4">source code repository</a>,
             and <a href="https://github.com/IdentityServer/IdentityServer4/tree/main/samples">ready to use samples</a>.
         </li>
-    </ul>
+    </ul>*@
 </div>
