--- a/templates/project/src/Service.Identity/Views/Shared/_Nav.cshtml
+++ b/templates/project/src/Service.Identity/Views/Shared/_Nav.cshtml
@@ -12,10 +12,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
         <a href="~/" class="navbar-brand">
-            <img src="~/icon.png" class="icon-banner">
-            IdentityServer4
+            @*<img src="~/icon.png" class="icon-banner">*@
+            MyProjectName
         </a>
-
         @if (!string.IsNullOrWhiteSpace(name))
         {
             <ul class="navbar-nav mr-auto">
