--- a/templates/project/src/Service.Identity/wwwroot/lib/bootstrap/scss/_navbar.scss
+++ b/templates/project/src/Service.Identity/wwwroot/lib/bootstrap/scss/_navbar.scss
@@ -47,7 +47,7 @@
 
 // Navbar brand
 //
-// Used for brand, project, or site names.
+// Used for brand, demo, or site names.
 
 .navbar-brand {
   display: inline-block;
