--- a/templates/project/clients/webapp/src/app/share/layout/layout.component.html
+++ b/templates/project/clients/webapp/src/app/share/layout/layout.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <a mat-button [routerLink]="['/user']" routerLinkActive="active">用户</a>
+  <a mat-button [routerLink]="['/index']" routerLinkActive="active">首页</a>
   <span style="display:flex;flex:1 1 auto"></span>
   <span *ngIf="isLogin">
     <button [matMenuTriggerFor]="appMenu" mat-button>
